--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -61,6 +61,6 @@
     </div>
   </div>
   <!-- Submit Input -->
-  <input [disabled]="!form.valid || processing || !emailValid || !usernameValid" type="submit" class="btn btn-primary" value="Submit" />
+  <input [disabled]="!form.valid || !emailValid || !usernameValid" type="submit" class="btn btn-primary" value="Submit" />
 </form>
 <!-- Registration Form /-->
