added guest account

--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -32,3 +32,17 @@
   <!-- Submit Button -->
   <input [disabled]="!form.valid || processing" class="btn btn-primary" type="submit" value="Login" />
 </form>
+
+<br />
+
+<!-- Sample account for deployment -->
+<div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Guest Account</h3>
+    </div>
+    <div class="panel-body">
+      <p>Username: guestusername</p>
+      <p>Password: guestpassword</p>
+    </div>
+  </div>
+
